# openapi-mcp

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
specs/: ably.yaml  mailgun.yaml  sms.yaml
src/: example_generator.py  server.py  tool_caller.py  tool_generator.py
src/utils/: auth.py  config.py  env_utils.py  logging_utils.py  openapi_loader.py  openapi_utils.py
tests/: __init__.py  test_example_generator.py  test_server.py  test_tool_caller.py  test_tool_generator.py  test_utils.py
